# superduper

./: .coverage  Basics.ipynb  README.md  exectue_this_for_ohmyzsh.sh  git_push.sh
helping_keshav/mndo/: .gitignore  AUTHORS  CONST.f90  COPYING  ChangeLog  FAQ  INSTALL  LIMIT.f90  MNDO2020.f  Makefile.am  NEWS  README  configure.ac  machine.mak  mndo2020.txt  mndo99.doc  mndocharmm.src
helping_keshav/mndo/2020/: ACHECK.f  ADDDSP.f  ADDFCK.f  ADDGFX.f  ADDGMU.f  ADDHCR.f  ADDNUC.f  AINVRS.f  ASSEL.f  ASSYM.f  ATMASS.f  AXIS.f  BANGLE.f  BDATA4.f  BETAIJ.f  BETLOW.f  BETOM.f  BETOR3.f  BETORT.f  BLOCK0.f  BLOCK1.f  BLOCK2.f  BLOCK3.f  BLOCK4.f  BLOCK5.f  BMAT3.f  BONTYP.f  BORDER.f  BORDP1.f  BORDP2.f  BSYM.f  CALREF.f  CCPROD.f  CHKANA.f  CHKLRO.f  CIS.f  CLRGUG.f  CMOVE.f  CODISK.f  COMPFG.f  (+338 more)
helping_keshav/mndo/BLAS/: Makefile.am  READ_ME  dblas1.f  dblas2.f  dblas3.f  zblas.f
helping_keshav/mndo/CGDMS/: BORDCG.f  CGDMS.f  CGROOT.f  CGUPD.f  COMMUT.f  DIRCG.f  DMSCOF.f  DMSGRD.f  ITERCG.f  MATCUT.f  MATDEV.f  MATSCL.f  MATUPM.f  Makefile.am  PRECO.f  PSCAL.f  PURIFY.f  SCFCG.f  TRACE1.f  TRACE2.f  TRACE3.f  TRMSUM.f
helping_keshav/mndo/DFTB/: Makefile.am
helping_keshav/mndo/ES/: 2e031.f90  2e131.f  2e132.f  2edrv.f  Makefile.am  cisenergy.f90  cisgrad.f90  cishess.f90  cismain.f90  cisnac.f90  cissolve.f90  cissym.f90  cisz.f90  ciszsolve.f90  dipole2.f90  es.f90  esglobal.f90  esgradient.f90  esmain.f90  matutil.f90  naccsf.f90  naccsf.f90-save  rpaenergy.f90  rpamain.f90  sasfcisenergy.f90  sasfcisnac.f90  sasfcisutil.f90  sasfcisz.f90  vecutil.f90
helping_keshav/mndo/GUGACI/: Makefile.am  basissets.f90  cpudavliu.cxx  davidson.f90  dcsrmm.f90  gaussoei.f90  gpudavliu.cu  gtointerface.f90  gugaci.f90  gugadirect.f90  gugaglobal.f90  gugaincore.f90  gugaloops.f90  gugalower.f90  gugamkl.f90  guganocuda.f90  guganocxx.f90  gugaplots.f90  gugasetup.f90  gugashape.f90  gugashape1.f90  gugashape10.f90  gugashape11.f90  gugashape2.f90  gugashape3.f90  gugashape4.f90  gugashape5.f90  gugashape6.f90  gugashape7.f90  gugashape8.f90  gugashape9.f90  gugasparse.f90  gugasrtgen.f90  gugatime.c  gugaupper.f90  gugautils.f90  matutils.f90  property.f90  sphrharm.f90
helping_keshav/mndo/HDLCOPT/: Makefile.am  constraint.f90  global.f90  hdlclib.f90  matrixlib.f90  mndolib.f90  primitive.f90  search.f90  searchlib.f90
helping_keshav/mndo/LAPACK/: Makefile.am  READ_ME
helping_keshav/mndo/MACHINE/: DEFMEM.f  Makefile.am  chkgpu.cu  dmr.f  gemmbl.f  memx.c  nodftb.f  noes.f  nogpu.f  noguga.f  nohdlc.f  nolindir.f  nopgplot.f  nops.f  nopsex.f  noscosmo.f  nosparse.f  novb.f
helping_keshav/mndo/PS/: COMPHF.f  Makefile.am  d1mch.f  dexint.f  psbbla.f  psbpsz.f  pscfca.f  psci.f  psdadm.f  psdext.f  psdipd.f  psdmpr.f  psdprt.f  psdrv.f  psds1a.f  psdst1.f  psdst2.f  psdst3.f  psdst4.f  psdxtr.f  psfock.f  psgsbp.f  psgvml.f  pshalf.f  pshini.f  psidr.f  psidrd.f  psidre.f  psidrp.f  psidrq.f  psidrs.f  psidrt.f  psil.f  psildd.f  psildp.f  psilds.f  psildx.f  psilgr.f  psilpd.f  psilpp.f  (+36 more)
helping_keshav/mndo/PSEX/: BOMD.f  BPARKD.f  CONINT.f  DYNAM.f90  EHRENFEST.f  MULSAV.f  MULSTA.f  Makefile.am  NACANA.f  NACINT.f  NACNUM.f  SCFMUL.f  SCROSS.f  SIMPHOP.f  SURHOP.f  YARHES.f  random.f90
helping_keshav/mndo/SCOSMO/: BNDPOP.f  CPEFERMI.f  CPEMNM.f  CPEMod.f  GENSW.f  Makefile.am  MinimizeMod.f90  PELLENQ.f  QPOP.f  SCosmoMNDOInterfaces.f90  SCosmoMNDOMod.f90  SIMPLEDISP.f  SSCPE.f  SurfaceMod.f90  VEPMod.f90  Y77LIB.f  YLib.f90  cosmo_helper.f90  cosmo_io.f90  cosmo_mod.f90  cosmo_util.f90  main.f90  rbMod.f90
helping_keshav/mndo/SKIT/: Makefile.am  aplbs.f  blassm.f  formats.f  unary.f
helping_keshav/mndo/SPARSE/: BORDS1.f  CGDMSS.f  CGROOTS.f  CGUPDS.f  DCARTS.f  DDOTS1.f  DDOTS2.f  DFPUPD.f  DIAPRC.f  DIPOLS.f  DIRCGS.f  DMSCOFS.f  DMSGRDS.f  FILFRG.f  FRAGMS.f  HFOCKS.f  IDAMAXP.f  INDEXN.f  MATDEVS.f  Makefile.am  PONES.f  PRTSCFS.f  PSORTS.f  PURIFYN.f  PURIFYP.f  SCFDMS.f  SPAPRT.f  SPARSP.f  SPAUPM.f  SRTFRG.f  UTIL.f  XERALL.f  XERSPA.f  amubdgp.f  amubp.f  aplbdgp.f  aplbp.f  coicsrp.f  copmatp.f  csrcscp.f  (+7 more)
helping_keshav/mndo/VB/: Makefile.am  OAOINT.f90  VBFACE.f  VBINTS.f
helping_keshav/mndo/mdtools/: mdfilter.py
helping_keshav/mndo/testanu/: READ_ME  anu.grep  bench1a.inp  bench1b.inp  bench1c.inp  bench1d.inp  bench1e.inp  bench1f.inp  bench2a.inp  bench2b.inp  bench2c.inp  bench3a.inp  bench3b.inp  bench4a.inp  bench4b.inp  bench4c.inp  testanugo
helping_keshav/mndo/testdftb/: check.awk  dkpopti.inp  dkpopti.opt  dkpsp.inp  dkpsp.opt  ethaneopti.inp  ethaneopti.opt  ethanesp.inp  ethanesp.opt  waterdimeropti.inp  waterdimeropti.opt  waterdimersp.inp  waterdimersp.opt
helping_keshav/mndo/testes/: input.php
helping_keshav/mndo/testguga/: check.awk  job10a.inp  job10a.opt  job10b.inp  job10b.opt  job10c.inp  job10c.opt  job10d.inp  job10d.opt  job10e.inp  job10e.opt  job10f.inp  job10f.opt  job10g.inp  job10g.opt  job10h.inp  job10h.opt  job10i.inp  job10i.opt  job10j.inp  job10j.opt  job10k.inp  job10k.opt  job10l.inp  job10l.opt  job11a.inp  job11a.opt  job11b.inp  job11b.opt  job11c.inp  job11c.opt  job11d.inp  job11d.opt  job11e.inp  job11e.opt  job11f.inp  job11f.opt  job11g.inp  job11g.opt  job11h.inp  (+481 more)
helping_keshav/mndo/testhdlc/: READ_ME  hdlc1a.inp  hdlc1a.opt  hdlc1b.inp  hdlc1b.opt  hdlc1c.inp  hdlc1c.opt  hdlc1d.inp  hdlc1d.opt  hdlc2a.inp  hdlc2a.opt  hdlc2b.inp  hdlc2b.opt  hdlc2c.inp  hdlc2c.opt  hdlc2d.inp  hdlc2d.opt  hdlc2e.inp  hdlc2e.opt  hdlc3a.inp  hdlc3a.opt  hdlc3b.inp  hdlc3b.opt  hdlc3c.inp  hdlc3c.opt  hdlc4a.inp  hdlc4a.opt  hdlc5a.inp  hdlc5a.opt  hdlc5b.inp  hdlc5b.opt  hdlc6a.inp  hdlc6a.opt  hdlc6b.inp  hdlc6b.opt  hdlc8a.inp  hdlc8a.opt  hdlc8b.inp  hdlc8b.opt  hdlc9a.inp  (+1 more)
helping_keshav/mndo/testjobs/: READ_ME  check.awk  job1a.inp  job1b.inp  job1c.inp  job1d.inp  job1e.inp  job1e.opt  job1f.inp  job1g.inp  job1h.inp  job1h.opt  job1i.inp  job2a.inp  job2b.inp  job2c.inp  job3a.inp  job3a.opt  job3b.inp  job3b.opt  job3c.inp  job3d.inp  job3e.inp  job3f.inp  job3f.opt  job3g.inp  job3h.inp  job3i.inp  job3i.opt  (+56 more)
(+516 files in other folders)
